--- a/filebrowser/docker-compose.yml
+++ b/filebrowser/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - '8090:80'
     volumes:
-      - ./my-storage:/srv
+      - /home/tomek/homelab-ops:/srv
       - ./config:/database
     # Poniższa linia wymusza bazę danych w konkretnym miejscu
     command: [ "-d", "/database/filebrowser.db", "--address", "0.0.0.0", "--port", "80" ]
