--- a/homepage/docker-compose.yml
+++ b/homepage/docker-compose.yml
@@ -10,3 +10,5 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock:ro
     environment:
       - HOMEPAGE_ALLOWED_HOSTS=homepage.lab,192.168.1.53
+    env_file:
+    - ./config/custom.env
