--- a/homepage/config/widgets.yaml
+++ b/homepage/config/widgets.yaml
@@ -1,9 +1,15 @@
-- system:
+- resources:
     cpu: true
     memory: true
-    disk: /
+    disk: /          # Monitoruje główny dysk systemu
+
+- search:
+    provider: google
+    target: _blank
 
 - datetime:
+    text_size: xl
     format:
-      timeStyle: short
-      dateStyle: long
+      date: long
+      time: short
+      hour12: false
