--- a/homepage/docker-compose.yml
+++ b/homepage/docker-compose.yml
@@ -8,11 +8,11 @@ services:
     volumes:
       - ./config:/app/config
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - /proc:/host/proc:ro
-      - /sys:/host/sys:ro
+      - /host/proc:/host/proc:ro
+      - /host/sys:/host/sys:ro
     environment:
-      - HOMEPAGE_ALLOWED_HOSTS=homepage.lab,192.168.1.53
       - HOMEPAGE_VAR_ADGUARD_PASS=${ADGUARD_PASS}
       - HOMEPAGE_VAR_PORTAINER_KEY=${PORTAINER_KEY}
+      - HOMEPAGE_ALLOWED_HOSTS=192.168.1.53,homepage.lab,localhost,127.0.0.1
     extra_hosts:
-    - "host.docker.internal:host-gateway"
+      - "host.docker.internal:host-gateway"
